// Vitest Snapshot v1

exports[`components/jsCounter.vue > 初期表示 > snapshot 1`] = `
<div
  class="js-counter"
  data-v-265e7edc=""
>
  <button
    data-v-265e7edc=""
  >
    -
  </button>
   2 
  <button
    data-v-265e7edc=""
  >
    +
  </button>
</div>
`;

exports[`components/jsCounter.vue 初期表示 snapshot 1`] = `
<div
  class="js-counter"
>
  <button>
    -
  </button>
   2 
  <button>
    +
  </button>
</div>
`;
